--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,13 @@
 body {
   font-family: "Creato Display", sans-serif;
   background-color: white;
-  width: 100vw;
+}
+
+html,
+body {
+  width: 100vw !important;
+  max-width: 100vw !important;
+  overflow-x: hidden !important;
 }
 
 .container {
@@ -62,11 +68,10 @@ input {
   .splide__list {
     max-height: 590px !important;
     height: 590px !important;
-  }
-}
 
-.productSlider {
-  .splide__list {
-    align-items: center;
+    @media (max-width: 768px) {
+      height: 390px !important;
+      max-height: 390px !important;
+    }
   }
 }
