--- a/src/sections/Hero/styles.module.scss
+++ b/src/sections/Hero/styles.module.scss
@@ -2,6 +2,8 @@
   position: relative;
   width: 32px;
   height: 32px;
+  box-shadow: 2px 5px 4px 0px rgba(0, 0, 0, 0.3);
+
   &:after {
     content: "";
     position: absolute;
@@ -13,6 +15,17 @@
     z-index: -1;
     transform: translateX(-14%);
     border-radius: 50%;
+  }
+
+  @media (max-width: 768px) {
+    width: 28px;
+    height: 28px;
+
+    &:after {
+      width: 38px;
+      height: 38px;
+      transform: translateX(-13%);
+    }
   }
 }
 
@@ -28,7 +41,7 @@
       height: 40%;
       background-color: #ffffff4d;
       z-index: 10;
-      top: 0;
+      top: 24px;
       bottom: 0;
       margin: auto 0;
       left: calc(100% - 70px);
