--- a/src/App.css
+++ b/src/App.css
@@ -74,8 +74,8 @@ button {
     height: 590px !important;
 
     @media (max-width: 768px) {
-      height: 390px !important;
-      max-height: 390px !important;
+      height: 100% !important;
+      max-height: 100% !important;
     }
   }
 }
